change the Nav area

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,46 +30,48 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">Menu Available</h2>
+                <h2 class="text-center mt-0">Available Menu</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-bread-slice text-primary"></i></div>
                             <h3 class="h4 mb-2">Biryani</h3>
                             <ul class="text-muted mb-0">
                             <li>Chicken Biryani</li>
-                            <li>Beef Biryani</li>
+                            <li>Mutton Biryani</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-utensils text-primary"></i></div>
                             <h3 class="h4 mb-2">Haleem</h3>
                             <ul class="text-muted mb-0">
-                            <li>Chicken Biryani</li>
-                            <li>Beef Biryani</li>
+                            <li>Pulses Haleem</li>
+                            <li>Fried Haleem</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-stroopwafel text-primary"></i></div>
                             <h3 class="h4 mb-2">Kebabs</h3>
                             <ul class="text-muted mb-0">
-                            <li>Chicken Biryani</li>
-                            <li>Beef Biryani</li>
+                            <li>Chicken Kebab</li>
+                            <li>Mutton Kebab</li>
+                            <li>Muradabadi Kebab</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-drumstick-bite text-primary"></i></div>
                             <h3 class="h4 mb-2">Tandoori</h3>
                             <ul class="text-muted mb-0">
-                            <li>Chicken Biryani</li>
-                            <li>Beef Biryani</li>
+                            <li>Tandoori chai</li>
+                            <li>Tandoori chicken</li>
+                            <li>Tandoori Roti</li>
                             </ul>
                         </div>
                     </div>
