--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,9 +31,10 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/review">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="/#portfolio">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link"href="/admin">Admin</a></li>
                     </ul>
                 </div>
             </div>
