added some changes in gallery Section

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
         <footer class="bg-light py-5 foot">
                 <a class="socialR" href=""><i class="fab fa-twitter"></i></a>
                 <a class="socialR" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="socialR" href="https://instagram.com/bullet_royal_accessories"><i class="fab fa-instagram"></i></a>
+                <a class="socialR" href=""><i class="fab fa-instagram"></i></a>
                 <a class="socialR" href=""><i class="fas fa-envelope"></i></a>
                 <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Al Habib SmokeHouse</div></div>
         </footer>
